--- a/programming/language/python/python-smbc/pspec.xml
+++ b/programming/language/python/python-smbc/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the libsmbclient library</Summary>
         <Description>python-smbc is a Python binding for the libsmbclient library.</Description>
-        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.10.tar.bz2</Archive>
+        <Archive sha1sum="bf37346af4a6b543f7f91c46d0d1d0cc6020db32" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.13.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>samba-devel</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-11-17</Date>
+            <Version>1.0.13</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-12-26</Date>
             <Version>1.0.10</Version>
