--- a/programming/language/python/python-sqlalchemy/pspec.xml
+++ b/programming/language/python/python-sqlalchemy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>SQL toolkit and Object Relational Mapper for Python</Summary>
         <Description>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.</Description>
-        <Archive sha1sum="25ed13bbf6976d3c8a426972edf5d2aca101e63c" type="targz">mirrors://sourceforge/sqlalchemy/SQLAlchemy-0.6.5.tar.gz</Archive>
+        <Archive sha1sum="14a6c63995a99d5c026e4acfcdc5bbb49b130c9e" type="targz">mirrors://sourceforge/sqlalchemy/SQLAlchemy-0.7.9.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="18">
+            <Date>2012-11-17</Date>
+            <Version>0.7.9</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="17">
             <Date>2010-10-26</Date>
             <Version>0.6.5</Version>
