--- a/programming/language/python/python-sqlparse/pspec.xml
+++ b/programming/language/python/python-sqlparse/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A non-validating SQL parser module for python</Summary>
         <Description>python-sqlparse is a non-validating SQL parser module. It provides support for parsing, splitting and formatting SQL statements.</Description>
-        <Archive sha1sum="978874e5ebbd78e6d419e8182ce4fb3c30379642" type="targz">http://python-sqlparse.googlecode.com/files/sqlparse-0.1.2.tar.gz</Archive>
+        <Archive sha1sum="852fb9fb955992cc025d75d0cbfc93c57967bab7" type="targz">http://python-sqlparse.googlecode.com/files/sqlparse-0.1.5.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-17</Date>
+            <Version>0.1.5</Version>
+            <Comment>version bump</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-12-17</Date>
             <Version>0.1.2</Version>
