--- a/programming/language/python/python-sympy/pspec.xml
+++ b/programming/language/python/python-sympy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Symbolic Python library</Summary>
         <Description>Python library for symbolic mathematics</Description>
-        <Archive sha1sum="b50b1a256269df02b19c74c8a1491b5e42d6f26b" type="targz">http://sympy.googlecode.com/files/sympy-0.6.7.tar.gz</Archive>
+        <Archive sha1sum="cc1a030acb40c273a104d10b5fb0123841c98236" type="targz">http://sympy.googlecode.com/files/sympy-0.7.2.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-17</Date>
+            <Version>0.7.2</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="8">
             <Date>2010-10-26</Date>
             <Version>0.6.5</Version>
