--- a/programming/language/python/python-transaction/pspec.xml
+++ b/programming/language/python/python-transaction/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Transaction management for Python</Summary>
         <Description>Transaction package contains a generic transaction implementation for Python.</Description>
-        <Archive sha1sum="af22af9e737dfdc59627b3686aead6dbc199bc1d" type="targz">http://pypi.python.org/packages/source/t/transaction/transaction-1.1.1.tar.gz</Archive>
+        <Archive sha1sum="b50e18b2f68c568c94632b29a14dce04651234d0" type="targz">http://pypi.python.org/packages/source/t/transaction/transaction-1.3.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-zope-interface</Dependency>
             <Dependency>python-setuptools</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-18</Date>
+            <Version>1.3.0</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin</Email>
+        </Update>
         <Update release="3">
             <Date>2011-02-04</Date>
             <Version>1.1.1</Version>
