--- a/programming/language/python/python-xcb/pspec.xml
+++ b/programming/language/python/python-xcb/pspec.xml
@@ -12,19 +12,30 @@
         <IsA>library</IsA>
         <Summary>X Python binding (xpyb), based on the X C Binding (XCB) library</Summary>
         <Description>python-xcb (xpyb) provides a Python binding to the X Window System protocol via libxcb.</Description>
-        <Archive sha1sum="1fbb6a128e8c46321e1a5197c6c55c0b884c28fa" type="tarbz2">http://xcb.freedesktop.org/dist/xpyb-1.2.tar.bz2</Archive>
+        <Archive sha1sum="c64dff0180b9bf69e90dac3c01805aa1f3588ba0" type="tarbz2">http://xcb.freedesktop.org/dist/xpyb-1.3.1.tar.bz2</Archive>
+        <BuildDependencies>
+            <Dependency versionFrom="1.8">xcb-proto</Dependency>
+        </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-xcb</Name>
         <Files>
-            <Path fileType="library">/usr/lib/python*</Path>
+            <Path fileType="header">/usr/include</Path>
+             <Path fileType="library">/usr/lib/python*</Path>
             <Path fileType="data">/usr/lib/pkgconfig</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-18</Date>
+            <Version>1.3.1</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-10-13</Date>
             <Version>1.2</Version>
