--- a/programming/language/python/python-tagpy/pspec.xml
+++ b/programming/language/python/python-tagpy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python bindings for taglib</Summary>
         <Description>TagPy is a set of python bindings for taglib. It supports ID3 v1/v2, ogg/vorbis/flac comments, ape tags etc. in many formats like mp2/mp3/flac/mpc/ogg/musepack.</Description>
-        <Archive sha1sum="4b86ba3c56562e859e9e5a83eec7f6b90aa44005" type="targz">http://pypi.python.org/packages/source/t/tagpy/tagpy-0.94.7.tar.gz</Archive>
+        <Archive sha1sum="052126a533e48f60807b0a678b15e594ef57d867" type="targz">http://pypi.python.org/packages/source/t/tagpy/tagpy-0.94.8.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>boost-devel</Dependency>
             <Dependency>taglib-devel</Dependency>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-11-18</Date>
+            <Version>0.94.8</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-13</Date>
             <Version>0.94.7</Version>
