--- a/programming/language/python/python-turbogears/pspec.xml
+++ b/programming/language/python/python-turbogears/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>TurboGears web framework</Summary>
         <Description>TurboGears is a Python web application framework consisting of several underlying components such as MochiKit, SQLObject, CherryPy and Kid.</Description>
-        <Archive sha1sum="173fa29edee858ef5f2728c024f6213e37a76e02" type="targz">http://files.turbogears.org/eggs/TurboGears-1.1.2.tar.gz</Archive>
+        <Archive sha1sum="2d796cfd7b92db9bdf6e3836595ae2ca4cd803f9" type="targz">http://www.turbogears.org/2.2/downloads/2.2.0/TurboGears2-2.2.0.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -41,6 +41,16 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-18</Date>
+            <Version>2.2.0</Version>
+            <Comment>version bump to new line:
+                * TurboGears 2 is a reinvention of TurboGears and a return to TurboGears’ roots.
+                * http://www.turbogears.org/2.2/docs/main/TG2Philosophy.html
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="8">
             <Date>2011-03-21</Date>
             <Version>1.1.2</Version>
