--- a/programming/language/python/python-turbojson/pspec.xml
+++ b/programming/language/python/python-turbojson/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>TurboGears JSON file format support plugin</Summary>
         <Description>python-turbojson is a TurboGears support package which provides a template engine plugin, allowing you to easily use JSON via the simplejson module with TurboGears, Buffet or other systems that support the python.templating.engines entry point.</Description>
-        <Archive sha1sum="1e2bcb1218c8dd37ca1441dfc231c805981f7a67" type="targz">http://pypi.python.org/packages/source/T/TurboJson/TurboJson-1.3.tar.gz</Archive>
+        <Archive sha1sum="2df78b067654385dc0db85099ca8eb6309fb8dfc" type="targz">http://www.turbogears.org/2.2/downloads/2.2.0/TurboJson-1.3.2.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -28,6 +28,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-18</Date>
+            <Version>1.3.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-12-07</Date>
             <Version>1.3</Version>
