--- a/programming/language/python/python-webhelpers/pspec.xml
+++ b/programming/language/python/python-webhelpers/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A library of helper functions</Summary>
         <Description>python-webhelpers is a library of helper functions intended to make writing templates in web applications easier. It's the standard function library for Pylons and TurboGears 2.  It also contains a large number of functions not specific to the web, including text processing, number formatting, date calculations, container objects, etc.</Description>
-        <Archive sha1sum="50ecabacfe60570f28c126c8df3d0b5b444d3112" type="targz">http://pypi.python.org/packages/source/W/WebHelpers/WebHelpers-1.2.tar.gz</Archive>
+        <Archive sha1sum="5ef6e48aade8c625577def09cf670ef10d197911" type="targz">http://pypi.python.org/packages/source/W/WebHelpers/WebHelpers-1.3.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-sphinx</Dependency>
             <!-- needed while documentation creation -->
@@ -46,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-18</Date>
+            <Version>1.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-11-30</Date>
             <Version>1.2</Version>
