--- a/programming/language/python/python-xlwt/pspec.xml
+++ b/programming/language/python/python-xlwt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Library to create spreadsheet files compatible with MS Excel 97/2000/XP/2003 XLS files</Summary>
         <Description>xlwt is a library for generating spreadsheet files that are compatible with Excel 97/2000/XP/2003, OpenOffice.org Calc, and Gnumeric. xlwt has full support for Unicode. Excel spreadsheets can be generated on any platform without needing Excel or a COM server. The only requirement is Python 2.3 to 2.6. xlwt is a fork of pyExcelerator.</Description>
-        <Archive sha1sum="f56d3de29bc3f39c560660fd7aaecef6ad7cb5a4" type="targz">http://pypi.python.org/packages/source/x/xlwt/xlwt-0.7.2.tar.gz</Archive>
+        <Archive sha1sum="2f2b6db6ea3021a2b4e37bed182996af85da1844" type="targz">http://pypi.python.org/packages/source/x/xlwt/xlwt-0.7.4.tar.gz</Archive>
         <Patches>
             <Patch>dontdodoc.patch</Patch>
         </Patches>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-18</Date>
+            <Version>0.7.4</Version>
+            <Comment>Update package</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-01-14</Date>
             <Version>0.7.2</Version>
