--- a/programming/language/python/python-zope-proxy/pspec.xml
+++ b/programming/language/python/python-zope-proxy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Generic transparent proxies for Python</Summary>
         <Description>Zope proxies are special objects which serve as mostly-transparent wrappers around another object.</Description>
-        <Archive sha1sum="7071bfbd7ad286286e4cd10092e5160937ad580c" type="zip">http://pypi.python.org/packages/source/z/zope.proxy/zope.proxy-3.6.1.zip</Archive>
+        <Archive sha1sum="f3a9cfe7d27956c396dd0d3b696f9ef8dd1cc82e" type="targz">http://pypi.python.org/packages/source/z/zope.proxy/zope.proxy-4.0.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-zope-interface</Dependency>
             <Dependency>python-setuptools</Dependency>
@@ -42,6 +42,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-18</Date>
+            <Version>4.0.0</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2011-02-04</Date>
             <Version>3.6.1</Version>
