--- a/programming/language/python/snakefood/pspec.xml
+++ b/programming/language/python/snakefood/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Generates dependency graphs from Python code</Summary>
         <Description>Snakefood is a dependency graph generator from Python code. It uses AST to parse Python files thus very reliable and fast.</Description>
-        <Archive sha1sum="d57ec4227e0b8ba1f3b40c63e49a1a11b03c8fe7" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/snakefood-1.4_20110512.tar.bz2</Archive>
+        <Archive sha1sum="b11e8a1bc7edb1e0c65130da63b774f4c33b8bd8" type="targz">https://github.com/downloads/pardus-anka/2013/snakefood-1.4_20121118.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-18</Date>
+            <Version>1.4_20121118</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2011-05-12</Date>
             <Version>1.4_20110512</Version>
