--- a/programming/language/python/geoip-python/pspec.xml
+++ b/programming/language/python/geoip-python/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>GeoIP Python API</Summary>
         <Description>geoip-python contains Python bindings for the GeoIP library.</Description>
-        <Archive sha1sum="bb7d89425319a1ae517d9b4eacd7c22b19fcf195" type="targz">http://www.maxmind.com/download/geoip/api/python/GeoIP-Python-1.2.5.tar.gz</Archive>
+        <Archive sha1sum="0af5f5d06bc81b5427019d28ba029e8c31dec9eb" type="targz">http://www.maxmind.com/download/geoip/api/python/GeoIP-Python-1.2.7.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>geoip-devel</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-20</Date>
+            <Version>1.2.7</Version>
+            <Comment>Version Bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2011-05-30</Date>
             <Version>1.2.5</Version>
