--- a/programming/language/java/hamcrest/pspec.xml
+++ b/programming/language/java/hamcrest/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Library of matchers for building test expressions</Summary>
         <Description>Provides a library of matcher objects (also known as constraints or predicates) allowing 'match' rules to be defined declaratively, to be used in other frameworks. Typical scenarios include testing frameworks, mocking libraries and UI validation rules.</Description>
-        <Archive sha1sum="e7c8511e3702545eb50b38e5aa2c3d887d8393ef" type="targz">http://hamcrest.googlecode.com/files/hamcrest-1.1.tgz</Archive>
+        <Archive sha1sum="f0ab4d66186b894a06d89d103c5225cf53697db3" type="targz">http://hamcrest.googlecode.com/files/hamcrest-1.3.tgz</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-21</Date>
+            <Version>1.1.3</Version>
+            <Comment>Güncellendi.</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="3">
             <Date>2011-02-02</Date>
             <Version>1.1</Version>
