--- a/programming/language/java/hsqldb/pspec.xml
+++ b/programming/language/java/hsqldb/pspec.xml
@@ -12,13 +12,19 @@
         <IsA>library</IsA>
         <Summary>A relational database engine written in Java, with a JDBC driver</Summary>
         <Description>HSQLdb is a relational database engine written in JavaTM , with a JDBC driver, supporting a subset of ANSI-92 SQL. It offers a small (about 100k), fast database engine which offers both in memory and disk based tables. Embedded and server modes are available.</Description>
-        <Archive sha1sum="7168b0f40aa5c72267899601c116d2348d2f56ec" type="zip">mirrors://sourceforge/project/hsqldb/hsqldb/hsqldb_1_8_0/hsqldb_1_8_0_10.zip</Archive>
+        <Archive sha1sum="15b1ece2f131bdb007cae5762f631e8d5fd6eaae" type="zip">http://heanet.dl.sourceforge.net/project/hsqldb/hsqldb/hsqldb_1_8_1/hsqldb_1_8_1_3.zip</Archive>
         <!-- Do not upgrade this package to version 1.8.1 series unless you are sure that OpenOffice supports that version -->
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
         </BuildDependencies>
+	<Patches>
+	    <Patch level="0">hsqldb-1.8.0-scripts.patch</Patch>
+	    <Patch level="0">hsqldb-1.8.0-specify-su-shell.patch</Patch>
+	    <Patch level="1">hsqldb-tmp.patch</Patch>
+	</Patches>
     </Source>
+
     <Package>
         <Name>hsqldb-lib</Name>
         <RuntimeDependencies>
@@ -32,6 +38,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-21</Date>
+            <Version>1.8.1.3</Version>
+            <Comment>Güncellendi.</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="8">
             <Date>2010-10-13</Date>
             <Version>1.8.0.10</Version>
