--- a/network/mail/sendmail/README
+++ b/network/mail/sendmail/README
@@ -16,5 +16,5 @@
 
 5-Yukardakiler exim belkide qpopper paketi içinde geçerli
 
-6-msmtp paketi varken konsoldan mail göndermek için yukardakileri kullanmak zorunda değiliz.
+6-msmtp paketi varken konsoldan mail göndermek için yukardakileri kullanmak zorunda değiliz.O basit ve iyi çalışıyor
 
