--- a/network/mail/sendmail/README
+++ b/network/mail/sendmail/README
@@ -6,7 +6,7 @@
     
     Aynı dizinde bulunması gereken daha başka ayar dosyaları da var...
     
-2-Hali hazırda kurulan program ayarsız.Yukardaki dosyaları düzenlemek gerekiyor...
+2-Yukardaki dosyaları düzenlemek ve daemon için service betiği yazmak gerekiyor...
 
 3-Ayarlar fazla neyin ne ne olduğunu anlamak zor.Bu inşa yetersiz ayarlarla ilgili bazı
 
