--- a/programming/language/python/notify-python/pspec.xml
+++ b/programming/language/python/notify-python/pspec.xml
@@ -20,6 +20,8 @@
         </BuildDependencies>
         <Patches>
             <Patch level="1">link-with-python.patch</Patch>
+            <Patch level="1">notify-python-0.1.1-fix-GTK-symbols.patch</Patch>
+            <Patch level="1">libnotify0.7.patch</Patch>
         </Patches>
     </Source>
 
