--- a/programming/language/dotnet/notify-sharp/pspec.xml
+++ b/programming/language/dotnet/notify-sharp/pspec.xml
@@ -37,7 +37,9 @@
             <Dependency>dbus-sharp-glib</Dependency>
         </RuntimeDependencies>
         <Files>
-            <Path fileType="library">/usr/lib</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
+            <Path fileType="data">/usr/lib/mono</Path>
         </Files>
     </Package>
 
