--- a/programming/language/java/tomcat-servlet-api/pspec.xml
+++ b/programming/language/java/tomcat-servlet-api/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Java Servlet API Reference Implementation</Summary>
         <Description>tomcat-servlet-api contains Tomcat's Servlet API 2.5/JSP API 2.1 implementation.</Description>
-        <Archive sha1sum="617b0a6ae139649402bd6afb6420c6968206d1a6" type="targz">mirrors://apache/tomcat/tomcat-5/v5.5.33/src/apache-tomcat-5.5.33-src.tar.gz</Archive>
+        <Archive sha1sum="465bf20c80b2a39c9baa9b31f21ee5b14530d72e" type="targz">http://www.apache.org/dist/tomcat/tomcat-5/v5.5.36/src/apache-tomcat-5.5.36-src.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-12-09</Date>
+            <Version>5.5.36</Version>
+            <Comment>Version bump</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
         <Update release="8">
             <Date>2011-05-26</Date>
             <Version>5.5.33</Version>
