--- a/programming/language/java/junit/pspec.xml
+++ b/programming/language/java/junit/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A simple framework to write repeatable tests</Summary>
         <Description>JUnit is a regression testing framework written by Erich Gamma and Kent Beck. It is used by the developer who implements unit tests in Java. JUnit is Open Source Software, released under the IBM Public License and hosted on SourceForge.</Description>
-        <Archive sha1sum="15209b0933816c8e940a8375459be6e61e5f1662" type="zip">http://github.com/downloads/KentBeck/junit/junit4.8.2.zip</Archive>
+        <Archive sha1sum="f72cc0b69530a8a82f96f6c1b0d87c37d66bf80e" type="zip">https://github.com/downloads/KentBeck/junit/junit4.11.zip</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
