--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>SIP is a tool for generating bindings for C++ classes so that they can be used by Python</Summary>
         <Description>SIP is a tool for generating bindings for C and C++ libraries so that they can be used by Python. It takes any C or C++ libraries and converts them into Python extension modules.</Description>
-        <Archive sha1sum="6b4e4bec0a80fcb872c3a8b1eed152a1d4528d0b" type="targz">http://downloads.sourceforge.net/project/pyqt/sip/sip-4.14/sip-4.14.tar.gz</Archive>
+        <Archive sha1sum="ce836f600b6c8c2c7700d7902492ba6d96404fd9" type="targz">mirrors://sourceforge/pyqt/sip-4.14.2.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python3</Dependency>
         </BuildDependencies>
@@ -69,6 +69,13 @@
     </Package>
 
     <History>
+        <Update release="50">
+            <Date>2012-12-15</Date>
+            <Version>4.14.2</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="49">
             <Date>2012-11-10</Date>
             <Version>4.14</Version>
