--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:tr</IsA>
         <Summary>Turkish KDE4 internationalization package</Summary>
         <Description>kde-l10n-tr is the KDE4 internationalization package that provides Turkish translations for KDE4 applications.</Description>
-        <Archive sha1sum="ebd0f93a493b43209b57517cdce9711f93e858a1" type="tarxz">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-tr-4.9.3.tar.xz</Archive>
+        <Archive sha1sum="9f8b4449bda2f83e32f224c2cfdb883d791a07b0" type="tarxz">mirrors://kde/unstable/4.9.90/src/kde-l10n/kde-l10n-tr-4.9.90.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.90">kdelibs-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <!-- Include playground-network translations too -->
@@ -60,6 +60,13 @@
     </Package>
 
     <History>
+        <Update release="89">
+            <Date>2012-12-15</Date>
+            <Version>4.9.90</Version>
+            <Comment>Version bump to 4.9.90</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="88">
             <Date>2012-11-10</Date>
             <Version>4.9.3</Version>
