--- a/desktop/kde/l10n/kde-l10n-pl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pl/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:pl</IsA>
         <Summary>Polish KDE4 internationalization package</Summary>
         <Description>kde-l10n-pl is the KDE4 internationalization package that provides Polish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="41624bc7c5251e00b08b14fb2dc0c5720b9c7d97">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-pl-4.9.3.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="a52d2e780307c76bf02b5aa31a6592c1fdd2c9b1">mirrors://kde/unstable/4.9.90/src/kde-l10n/kde-l10n-pl-4.9.90.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.90">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2012-12-15</Date>
+            <Version>4.9.90</Version>
+            <Comment>Version bump to 4.9.90</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="45">
             <Date>2012-11-11</Date>
             <Version>4.9.3</Version>
