--- a/desktop/kde/l10n/kde-l10n-da/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-da/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:da</IsA>
         <Summary>Danish KDE4 internationalization package</Summary>
         <Description>kde-l10n-da is the KDE4 internationalization package that provides Danish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="5e173bc039f55178aa00d8f54de4624aa553ef8f">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-da-4.9.3.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="e13b7e3acf2f7b6754e83d9f5d6f4b61c36181fe">mirrors://kde/unstable/4.9.90/src/kde-l10n/kde-l10n-da-4.9.90.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.90">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="37">
+            <Date>2012-12-15</Date>
+            <Version>4.9.90</Version>
+            <Comment>Version bump to 4.9.90</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="36">
             <Date>2012-11-13</Date>
             <Version>4.9.3</Version>
