--- a/desktop/kde/l10n/kde-l10n-bs/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-bs/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:bs</IsA>
         <Summary>Bosnian KDE4 internationalization package</Summary>
         <Description>kde-l10n-bs is the KDE4 internationalization package that provides Bosnian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="46db0ebdc2a49b106c58dba86f441722c7f70a18">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-bs-4.9.3.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="2806f1c1d918c6c66e8557d73280693a63f51980">mirrors://kde/unstable/4.9.90/src/kde-l10n/kde-l10n-bs-4.9.90.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.90">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2012-12-15</Date>
+            <Version>4.9.90</Version>
+            <Comment>Version bump to 4.9.90</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>      
         <Update release="9">
             <Date>2012-11-13</Date>
             <Version>4.9.3</Version>
