--- a/desktop/kde/l10n/kde-l10n-bg/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-bg/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:bg</IsA>
         <Summary>Bulgarian KDE4 internationalization package</Summary>
         <Description>kde-l10n-bg is the KDE4 internationalization package that provides Bulgarian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="6256f72200e35456c19d87eea643168a234a0b2c">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-bg-4.9.3.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="9c4b60957e5aa390c9dc94c6181b95af3d04d893">mirrors://kde/unstable/4.9.90/src/kde-l10n/kde-l10n-bg-4.9.90.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.90">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="45">
+            <Date>2012-12-15</Date>
+            <Version>4.9.90</Version>
+            <Comment>Version bump to 4.9.90</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="44">
             <Date>2012-11-13</Date>
             <Version>4.9.3</Version>
