--- a/programming/language/python/python-elementary/pspec.xml
+++ b/programming/language/python/python-elementary/pspec.xml
@@ -13,7 +13,7 @@
         <Summary>Elementary Python binding</Summary>
         <Description>python-elementary is the Python binding of Elementary widget set.</Description>
         <!--<Archive sha1sum="b50813a3cc910b704f2ff712dd96ace84e353c9f" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-elementary-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="6980a4ae910a0bdabba1cec7ccdf1cda570045bf" type="targz">https://github.com/circass/pisi-work/raw/master/e17-source/py-bind/python-elementary.tar.gz</Archive>
+        <Archive sha1sum="b11e249fb7496aa5a680de1bfe9bc311850de888" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-elementary-1.7.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency versionFrom="1.7.0">eina-devel</Dependency>
             <Dependency versionFrom="1.7.0">evas-devel</Dependency>
