--- a/programming/language/python/python-e_dbus/pspec.xml
+++ b/programming/language/python/python-e_dbus/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>E-DBus Python binding</Summary>
         <Description>python-e_dbus is the Python binding of e_dbus library.</Description>
-        <Archive sha1sum="83431d9f9194271406abe4f2047087c6feef62c6" type="targz">https://github.com/circass/pisi-work/raw/master/e17-source/py-bind/python-e_dbus.tar.gz</Archive>
+        <Archive sha1sum="b47c5ef7f5391d75d508839d38b102d8225f6b6b" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-e_dbus-1.7.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency versionFrom="1.7.0">ecore-devel</Dependency>
             <Dependency versionFrom="1.7.0">e_dbus-devel</Dependency>
