--- a/programming/language/dotnet/mono/pspec.xml
+++ b/programming/language/dotnet/mono/pspec.xml
@@ -15,13 +15,14 @@
         <IsA>library</IsA>
         <Summary>Mono runtime and class libraries, a C# compiler/interpreter</Summary>
         <Description>Mono is a C# compiler and interpreter. It also includes mono runtime and class libraries.</Description>
-        <Archive sha1sum="1a6e8c5a0c3d88d87982259aa04402e028a283de" type="tarbz2">http://pkgs.fedoraproject.org/repo/pkgs/mono/mono-2.10.9.tar.bz2/bbbff9d3d0c36b904437ada36a27eb9e/mono-2.10.9.tar.bz2</Archive>
+        <Archive sha1sum="165aa3f21189b83923fdf84400b527c7c4c4545a" type="tarbz2">http://download.mono-project.com/sources/mono/mono-3.0.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency versionFrom="2.8.1">libgdiplus</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">mono-dllmap.patch</Patch>
             <Patch level="1">mono-2.6-selfexe.patch</Patch>
+            <Patch level="1">mono-wapi_glop.patch</Patch>
         </Patches>
     </Source>
 
@@ -413,6 +414,13 @@
     </Package>
 
     <History>
+       <Update release="36">
+            <Date>2012-12-25</Date>
+            <Version>3.0.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
        <Update release="35">
             <Date>2012-06-25</Date>
             <Version>2.10.9</Version>
