sun-java: version bump

--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -16,8 +16,8 @@
         <Archive sha1sum="f55d32167da7347151c18539712ed357c8d3e584" type="binary">http://anka.pardus-linux.org/2013/source/dummy.tar.gz</Archive>
         <AdditionalFiles>
 <!--            <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>-->
-            <AdditionalFile permission="0644" target="i586.sha1">jdk-7u9-linux-i586.tar.gz.sha1sum</AdditionalFile>
-            <AdditionalFile permission="0644" target="x64.sha1">jdk-7u9-linux-x64.tar.gz.sha1sum</AdditionalFile>
+            <AdditionalFile permission="0644" target="i586.sha1">jdk-7u11-linux-i586.tar.gz.sha1sum</AdditionalFile>
+            <AdditionalFile permission="0644" target="x64.sha1">jdk-7u11-linux-x64.tar.gz.sha1sum</AdditionalFile>
             <!-- For no downloading binary file every time you run pisi bi
                  place appropriate binary in files folder and uncomment one from below lines.
             <AdditionalFile permission="0644" target="jdk-7u9-linux-i586.tar.gz"</AdditionalFile>
@@ -125,6 +125,13 @@
 -->
 
     <History>
+        <Update release="37">
+            <Date>2013-01-15</Date>
+            <Version>1.7_p11</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="38">
             <Date>2012-12-30</Date>
             <Version>1.7_p9</Version>
